# ada-infer-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  libaie95.gpr
src/: boolean_arrays-operators.ads  boolean_arrays.ads  boolean_functions.adb  boolean_functions.ads  float_arrays.ads  float_arrays_operators.ads  float_arrays_stream_io.ads  float_arrays_text_io.ads  float_functions.ads  generic_integer_arrays.ads  generic_real_arrays-io.adb  generic_real_arrays-io.ads  generic_real_arrays-operators.adb  generic_real_arrays-operators.ads  generic_real_arrays-stream_io.adb  generic_real_arrays-stream_io.ads  generic_real_arrays-text_io.adb  generic_real_arrays-text_io.ads  generic_real_arrays.ads  generic_real_functions.adb  generic_real_functions.ads  integer_arrays-operators.ads  integer_arrays.ads  long_float_arrays.ads  long_float_arrays_operators.ads  long_float_arrays_stream_io.ads  long_float_arrays_text_io.ads  long_float_functions.ads  nnef_tff_io.adb  nnef_tff_io.ads
src/cpu/: boolean_arrays-operators.adb  boolean_arrays.adb  generic_real_arrays-operators.adb  generic_real_arrays.adb  integer_arrays-operators.adb  integer_arrays.adb
tests/: alexnet.adb  alexnet.ads  alexnet_dist.cfg  alexnet_run.adb  generic_utils.adb  generic_utils.ads  tests.gpr  utils.adb  utils.ads
